fixing contact form

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
 
   <!-- SENDMAIL -->
   <script src="./assets/js/vendor/validator.min.js"></script>
-  <script src="./assets/js/vendor/form-scripts.js"></script>
+  <!--   <script src="./assets/js/vendor/form-scripts.js"></script> -->
 
   <script src="./assets/js/script.js"></script>
 </body>
